fix section spacing on mobile

--- a/scss/pages/_about.scss
+++ b/scss/pages/_about.scss
@@ -3,9 +3,6 @@
 .about {
   
   .block {
-    @include media-breakpoint-down(sm) {
-      margin-bottom: $spacing-sm !important;
-    }
 
     h4 {
       @include media-breakpoint-down(sm) {
